Changes in 4.8.6 (upcoming)

* Maintenance release with bug fixes.
* Fixed: Regression in override form usage in lists (thanks, Christian Rapp).
* Added: Latest text translations. Thank you to all our translators.
* Changed: <txp:variable trim> trims its own output (thanks, cara-tm).
* Changed: No Edit options in Write panel without appropriate privileges.

Changes in 4.8.5 (29 Mar 2021)

* Maintenance release including improvements for PHP 8.0 and bug fixes.
* Changed: <txp:header /> attributes are unset by default. Ensure any 'name'
  attributes are set before updating to avoid issues with custom headers.
* Fixed: Database connection issue for new installations on PHP 8.0.
* Fixed: libxml_disable_entity_loader() deprecation warning on PHP 8.0.
* Fixed: Undefined array key/offset warnings on PHP 8.0.
* Fixed: System temp directory notice on PHP 8.0.
* Fixed: Custom field ordering on Write panel.
* Fixed: Diagnostics panel strings no longer have 'Help' appended.
* Fixed: Draft/hidden/pending articles output 404 Not Found status as they should.
* Fixed: RSS/Atom feeds display correct titles (thanks, jrmartin).
* Fixed: Form processing on 'pretext_end' callback.
* Added: Support for WebP image format, on PHP 7.1 or higher.
* Added: SSL version verification on Diagnostics panel during update checks.
* Added: Latest text translations. Thank you to all our translators.
* Added: More aggregators in <txp:article /> 'fields' attribute.
* Added: Global 'break', 'replace' and 'trim' attributes.
* Added: 'breakby' and 'breakform' attributes for all content types.
* Added: <txp:image_info type="mime" />.
* Added: Support for Fulah language translation.
* Added: Locale for en, and improved locale fallbacks.
* Added: Import attributes in <txp:php /> as PHP variables.
* Added: 'root' attribute of <txp:page_url /> to create relative URLs.
* Changed: <txp:article_custom /> can paginate content using 'pageby' attribute.