@@ -5,6 +5,7 @@ Changes in 4.8.6 (upcoming)
 * Added: Latest text translations. Thank you to all our translators.
 * Changed: <txp:variable trim> trims its own output (thanks, cara-tm).
 * Changed: No Edit options in Write panel without appropriate privileges.
+* Developer: New articles>multi_edit.$method callback on Articles list panel.
 
 Changes in 4.8.5 (29 Mar 2021)
 
